P3/ejudge_contests/03/var/archive/xmlreports/0/0/0/000024
Content-type: text/xml

<?xml version="1.0" encoding="utf-8"?>
<testing-report run-id="24" judge-id="13" status="CE" scoring="ACM" run-tests="0" contest-id="303" compile-error="yes" >
  <uuid>b808193b-9418-47f7-8229-8aa78e24d95b</uuid>
  <compiler_output>000024.cpp:4:19: error: too many decimal points in number
 m,m2,p,g,v:array[-10..20000] of int64;
                   ^~~~~~~~~
000024.cpp:45:10: warning: character constant too long for its type
    write('This is impossible.')
          ^~~~~~~~~~~~~~~~~~~~~
000024.cpp:1:1: error: 'var' does not name a type
 var
 ^~~
000024.cpp:3:1: error: 'i' does not name a type
 i,j:longint;
 ^
000024.cpp:4:1: error: 'm' does not name a type
 m,m2,p,g,v:array[-10..20000] of int64;
 ^
000024.cpp:5:4: error: 'Begin' does not name a type
    Begin
    ^~~~~
000024.cpp:7:1: error: 'k' does not name a type
 k:=b-a;
 ^
000024.cpp:8:7: error: expected constructor, destructor, or type conversion before '(' token
 readln(n);
       ^
000024.cpp:9:1: error: expected unqualified-id before 'for'
 for i:=1 to k do begin
 ^~~
000024.cpp:11:4: error: 'm2' does not name a type
    m2[i]:=0; end;
    ^~
000024.cpp:11:14: error: 'end' does not name a type
    m2[i]:=0; end;
              ^~~
000024.cpp:12:1: error: expected unqualified-id before 'for'
 for i:=1 to n do begin
 ^~~
000024.cpp:14:5: error: expected unqualified-id before 'if'
     if (m[g[i]]&gt;p[i]) or (m[g[i]]=0) then
     ^~
000024.cpp:16:5: error: expected unqualified-id before 'if'
     if (m2[g[i]]&lt;p[i]) or (m2[g[i]]=0) then
     ^~
000024.cpp:17:21: error: 'end' does not name a type
     m2[g[i]]:=p[i]; end;
                     ^~~
000024.cpp:18:1: error: 'min' does not name a type
 min:=50000000000;
 ^~~
000024.cpp:19:1: error: expected unqualified-id before 'for'
 for i:=1 to k do begin
 ^~~
000024.cpp:24:9: error: 'end' does not name a type
         end;
         ^~~
000024.cpp:25:5: error: expected unqualified-id before 'if'
     if min&lt;50000000000 then
     ^~
000024.cpp:27:5: error: 'min' does not name a type
     min:=50000000000;
     ^~~
000024.cpp:28:5: error: 'end' does not name a type
     end;
     ^~~
000024.cpp:29:1: error: 'max' does not name a type
 max:=0;
 ^~~
000024.cpp:30:1: error: expected unqualified-id before 'for'
 for i:=1 to k do begin
 ^~~
000024.cpp:35:9: error: 'end' does not name a type
         end;
         ^~~
000024.cpp:36:5: error: expected unqualified-id before 'if'
     if max&gt;0 then
     ^~
000024.cpp:38:5: error: 'max' does not name a type
     max:=0;
     ^~~
000024.cpp:39:5: error: 'end' does not name a type
     end;
     ^~~
000024.cpp:40:1: error: expected unqualified-id before 'if'
 if (m[k]=50000000000) and (m2[k]&lt;&gt;0) then
 ^~
000024.cpp:42:1: error: expected unqualified-id before 'if'
 if (m[k]&lt;&gt;50000000000) and (m2[k]=0) then
 ^~
000024.cpp:44:1: error: expected unqualified-id before 'if'
 if (m[k]=50000000000) or (m2[k]=0) then
 ^~
000024.cpp:48:1: error: 'end' does not name a type
 end.
 ^~~
</compiler_output>
</testing-report>
